[gd_scene load_steps=7 format=2]

[ext_resource path="res://flame/flame.png" type="Texture" id=1]
[ext_resource path="res://flame/Flame.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 50.01

[sub_resource type="AtlasTexture" id=2]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 128, 128 )

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 128, 0, 128, 128 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 20.0
} ]

[node name="Flame" type="Area2D"]
scale = Vector2( 0.6, 0.6 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="TimeToLive" type="Timer" parent="."]

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 4 )

[connection signal="body_entered" from="." to="." method="_on_Flame_body_entered"]
[connection signal="timeout" from="TimeToLive" to="." method="_on_TimeToLive_timeout"]
